--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "bootstrap": "^4.4.1",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^7.0.26",
     "rollup": "^1.20.0",
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-svelte": "^5.0.1",
